--- a/style.scss
+++ b/style.scss
@@ -447,16 +447,6 @@ header {
 		justify-content: space-between;
 		align-items: center;
 		gap: 30px;
-		// .header-img {
-		// 	overflow: hidden;
-		// 	max-width: 80%;
-		// 	max-height: 80%;
-		// 	img {
-		// 		object-fit: cover;
-		// 		width: 100%;
-		// 		height: 100%;
-		// 	}
-		// }
 
 		.header-img {
 			overflow: hidden;
@@ -646,6 +636,22 @@ header {
 	font-family: 'Nunito', sans-serif;
 	font-weight: 600;
 }
+
+.scrollTop {
+	transform: rotate(90deg);
+	bottom: 20px;
+	position: fixed;
+	right: 20px;
+	z-index: 100;
+	width: 30px;
+	height: 30px;
+	opacity: 0.5;
+	transition: all 0.3s ease-in;
+	cursor: pointer;
+	&:hover {
+		opacity: 1;
+	}
+}
 //media
 
 @media screen and (max-width: 900px) {
@@ -678,6 +684,7 @@ header {
 
 @media screen and (max-width: 1115px) {
 	.information {
+		height: auto;
 		display: inline-block;
 		// height: auto;
 		padding: 40px 20px;
@@ -701,5 +708,19 @@ header {
 		&:hover {
 			box-shadow: none !important;
 		}
+	}
+
+	main {
+		padding-bottom: 40px;
+
+		.btn-M,
+		.btn-N,
+		.btn-G {
+			display: none;
+		}
+	}
+
+	.information-inner {
+		flex-direction: column-reverse;
 	}
 }
